fix margin logo, fix overflowX table

--- a/src/components/AlertDogTime/alertDogTime.css
+++ b/src/components/AlertDogTime/alertDogTime.css
@@ -1,6 +1,7 @@
 .alertContainer{
     width: 98dvw;
     border: 1px solid black;
+    margin-top: 30px;
     background-color: rgb(249, 243, 230);
 }
 .alertDogTimeTitle{
